--- a/blog/067.md
+++ b/blog/067.md
@@ -7,7 +7,7 @@ _2017-07-07 18:26:34_
 
 * * *
 
-承接自己[《中小型棋牌类网络游戏服务端架构》](http://blog.csdn.net/panshiqu/article/details/70160325)博文，用Golang实现基础架构逻辑后，准备再次谈谈我的想法。
+承接自己[《中小型棋牌类网络游戏服务端架构》](./066.html)博文，用Golang实现基础架构逻辑后，准备再次谈谈我的想法。
 
 已实现的逻辑与前文描述有几点不同：
 1. Gateway更名为Proxy，DBProxy更名为DB
